--- a/src/index.html
+++ b/src/index.html
@@ -24,9 +24,21 @@
                     <input type="text" class="tasks__input" id="task__input" placeholder="Новая задача">
                     <button class="tasks__add__D tasks__add" type="submit">Добавить</button>
                     <button class="tasks__add__M tasks__add"  type="submit"></button>
-
                 </form>
-                <div class="tasks__list" id="tasks__list"></div>
+
+                <div class="tasks__list" id="tasks__list">
+                   <!--<div class="task">
+                         <div class="task__title">1</div>
+                        <form class="task__change">
+                            <input type="text" class="task__input__change">
+                            <button class="task__input__button" type="submit"></button>
+                        </form>
+                        
+                        <div class="change"></div>
+                        <div class="checkbox"></div>
+                        <a href="#" class="task__remove"></a>
+                    </div>  -->
+                </div>  
             </div>
         </div>
     </main>
